# simple-airplane

./: LICENSE.md  README.md
simple_airplane_control/: CMakeLists.txt  package.xml
simple_airplane_control/config/: suav.yaml
simple_airplane_control/src/: suav_camera_follow_target.cpp
simple_airplane_description/: CMakeLists.txt  package.xml
simple_airplane_description/meshes/: simple_airplane.blend  simple_airplane.dae
simple_airplane_description/urdf/: simple_airplane.gazebo  simple_airplane.xacro  simple_airplane_pan_tilt_camera.xacro  simple_cylinder3.xacro
simple_airplane_gazebo/: CMakeLists.txt  package.xml
simple_airplane_gazebo/launch/: simple_airplane_empty_world.launch
simple_airplane_gazebo/worlds/: simple_airplane_empty_word.world
simple_airplane_plugins/: CMakeLists.txt  package.xml
simple_airplane_plugins/include/simple_airplane_plugins/: gazebo_ros_planar_move_with_banking.h  gazebo_ros_planar_move_with_banking_and_pitching.h
simple_airplane_plugins/src/: gazebo_ros_planar_move_with_banking.cpp  gazebo_ros_planar_move_with_banking_and_pitching.cpp
